# mailinflow

./: .env.example  .env.template  LICENSE  README.md  config_manager.py  email-triage.py  email_triage.py  main.py  pyproject.toml  streamlit_triage.py  todos.md
instructions/: CLAUDE.md  STREAMLIT_README.md  infiscal_config.template
